# 2025_graph_rag

./: .dockerignore  .env.template  .gitignore  ARCHITECTURE.md  Dockerfile  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  app.py  docker-compose.yml  graph_builder.py  improved_pipeline.py  main.py  ontology_rag.py  pyproject.toml  qdrant_manager.py  requirements.txt  res.json  verify_migration.py
EXPERIMENTS/: KG QA DeepSeek.md  LLM_ontology_approb.md  LLMs for Ontology Engineering.md  LLMs4OL.md  Ontology & SHACL.md  README.md  exp.requirements.txt  llms4ol_experiment.py  ontology_cot_experiment.py  ontology_kg_pipeline.py  term_typing_eval.py
EXPERIMENTS/data/: generated_ontology.ttl  kg_medical.ttl  ontology_seed.ttl  ontology_shapes.ttl
app/: __init__.py  api.py  config.py  dependencies.py
app/clients/: __init__.py  http_client.py  llm_client.py
app/models/: __init__.py  prompts.py
app/services/: __init__.py  document_service.py  entity_service.py  qa_service.py  relation_service.py
app/ui/: __init__.py  gradio_app.py
app/utils/: __init__.py  text_utils.py
data/: pharma_ontology.ttl
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: viewer.html
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Chat.tsx  DeleteConfirmModal.tsx  DocumentsPanel.tsx  MigrateModal.tsx  Sidebar.tsx
pipelines/: basic_app.py
