[project]
name = "graphrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.20",
    "gigachat>=0.1.40",
    "gradio>=5.37.0",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.28",
    "langchain-text-splitters>=0.3.8",
    "poppler-utils>=0.1.0",
    "python-dotenv>=1.1.1",
    "razdel>=0.5.0",
    "sentence-transformers>=5.1.0",
    "unstructured[pdf]>=0.18.5",
]
